tests/fixtures/positive/release-engineering/HardcodedLocalhostUrl.kt
package com.example.releaseengineering

val api = "http://localhost:8080/api/v1"
