tests/fixtures/negative/release-engineering/HardcodedLocalhostUrl.kt
package com.example.releaseengineering

val api = "https://api.example.com/v1"
